--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -88,9 +88,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftqquSokJ4lTzSyYI5KCbS3RTI7xIS10n_l0BYJMGyFEGMFw/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6aL34WUhK1UMdzeO4S5yq0EPZXsQ0oxN_tjLOFM9gcbOQGw/viewform?usp=sf_link" target="_blank">Fisika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf4Kxew_R4xJETwBdYzuA2XkImx7GeMasANUn6pwZ3M5qe2GQ/viewform?usp=sf_link" target="_blank">Biologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJL5loCubb6eWkBNIk0gn1lbxsjDwbBJ68oH-y88xcEG0njw/viewform?usp=header" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfKaSdjPXxtAbqHw8UnNr-JZgHMKQ195cKFjHN_c3zcWch_9Q/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/13Qyv2Z3BGfBct38B6iNXLAtpp-_S9PB12WDFqkVYMck/edit?usp=drivesdk" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHlKEsws5plADRWKoDoQic3VmpVxBWZR5aToDhGrpnS7Zolg/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdquhBqEuwd0DcO7Lf2Sg5ZczuBr9njqeiLy2xYR-vlvc8Ndw/viewform?usp=sf_link" target="_blank">Sosiologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia Kelas 10-1 dan 10-2</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfIr3yYxzzjyMO_RhMYJCvlWBWC1EI5ug0nuzCQET_A2AVHJw/viewform?usp=dialog" target="_blank">Kimia Kelas 10=3</a></li>
