--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -87,9 +87,9 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCRom-MhCK5_vhjuCASSD9zepDmDBVfg6Ye3u2yxuR1heycQ/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Al-Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdKzns2AlqHSHGdKIkt3ROMUIyq4EK08axfFr1xV6pWpQjNqQ/viewform?usp=sf_link" target="_blank">Fisika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdwXIqs1VdN67RCSryx8lEixwhQpJFjYwkhwT2hGdmnaxV0MQ/viewform?usp=sf_link" target="_blank">Biologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSchpwD9rvb4Tv-agnDLtJgW2di7SaT6tOYjJUomyf8jRMi8rw/viewform?usp=header" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScC73obQhoqZUV7_Fi0bMSTHiK0tgYXtuRapCfAAnr2A_Y7Uw/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScaF-9hhRk-kIn4SgPx4n-3Gl_yYc0WhNbzCGmyz5v_Rj1-FA/viewform?usp=sf_link" target="_blank">PKN</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd-iQ1AGNAUPp1YYnePCZ2R5o2Og7Ot4UfD9OWTthBvfOOPQw/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScjIF75ePJTh_3yVNU0PsHaTtle3naXIDHGUvmdBuYhcuRmKg/viewform?usp=sf_link" target="_blank">Sosiologi XI 3</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdxJYFstjacQtaZwcHNAYmbmIV--lS4P-XjgVu4ZrV9wG4M_g/viewform?usp=sf_link" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgEAIpIWwryfDCFuZzEzu90OKgLbF81ey3OxjauUxFNkOsgw/viewform?usp=header" target="_blank">Matematika Wajib</a></li>
