--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -83,11 +83,11 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeKH9wGiYDxLtKYCLP03MhAmn6LOWk10nvcR7xwW3-Dw5KHJQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe0WjNFl0_csuaX-LdbpbBSiIIESsRJP0L3A10Fxtie02BvXg/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScdPi5qRB0iYwBsYLpxqyNIK1TJW1IaIDJ3MXM2aC0Ol5TWgw/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdc27WDCkTHuhdb_i6mX_I-Vx3nM0o_iHWQDPkwlfS9ttbsCg/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-xEKCOFx6mxZygwMppS-VOOocX6fiSFbN2mGlSaeuCMWgFg/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdN4LpX2n8rBoYmF2eeT3dAlbf99Rqy-l803_XZxTzHxC-M8w/viewform?usp=sf_link" target="_blank">Informatika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSftqquSokJ4lTzSyYI5KCbS3RTI7xIS10n_l0BYJMGyFEGMFw/viewform?usp=sf_link" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6aL34WUhK1UMdzeO4S5yq0EPZXsQ0oxN_tjLOFM9gcbOQGw/viewform?usp=sf_link" target="_blank">Fisika</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHBIvXOeGMmMYqZDD7bJaAx0fQyAwoFR1utqomdSKHpWbabg/viewform?usp=dialog" target="_blank">Fisika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJL5loCubb6eWkBNIk0gn1lbxsjDwbBJ68oH-y88xcEG0njw/viewform?usp=header" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfKaSdjPXxtAbqHw8UnNr-JZgHMKQ195cKFjHN_c3zcWch_9Q/viewform?usp=sf_link" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHlKEsws5plADRWKoDoQic3VmpVxBWZR5aToDhGrpnS7Zolg/viewform?usp=dialog" target="_blank">PKN</a></li>
