--- a/kelas11-1.html
+++ b/kelas11-1.html
@@ -81,9 +81,9 @@
     <h1>Mata Pelajaran Kelas 11-1</h1>
     <ul>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfBmgn5-9pyX05rIncGW0BVAE0ZtFrQtfmLjVPK15mAW-ZWcQ/viewform?usp=sf_link" target="_blank">Ekonomi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeXtJsx66-J0406GYAihKSUGtvP1KO33yqtbJ9W94F0MME5qg/viewform?usp=sf_link" target="_blank">Bahasa Inggris</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScfapfD5pl_Iq_mJNEVhG_wg4ZJifWhfgSW08YIWYx1LpB8Ug/viewform?usp=dialog" target="_blank">Bahasa Inggris</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdq_zxguHeGzKCQLs7Hi3GIxZdLsD-Easm1hyc6UW5FObq-hw/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeqIES0v9Dek5cH0gx_VYEG_3ROhTBGvQw3xNXff_Pu0zgLlQ/viewform?usp=sf_link" target="_blank">Sejarah Indonesia</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdZyGpbpmgQ-85K91kEZDQufHUhVAcr0pJ-gihYRdcr2dkOCA/viewform?usp=dialog" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdRCcro9KKkocoIulLsc5cSZOA5aukdbBuVNjVc9Jp3v_MavA/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc9Z-bYYCcc5_aqNE_r0nCNbsB_MP_NamNKIG8BYNBEu4Y5mw/viewform?usp=dialog" target="_blank">Al-Qur'an_Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCIRSQLnGNhoq6BRabvfYxK_tGHtxpdBc30AqZLAEYLI1Lmg/viewform?usp=dialog" target="_blank">Fisika</a></li>
