--- a/kelas10-2.html
+++ b/kelas10-2.html
@@ -82,7 +82,7 @@
     <ul>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeKH9wGiYDxLtKYCLP03MhAmn6LOWk10nvcR7xwW3-Dw5KHJQ/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Ekonomi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJb9dJ69sGaJKs0NnJjMPiX_NM7_g_z9Kbb6n5HxAWHAmOBw/viewform?usp=dialog" target="_blank">Bahasa Inggris</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScdPi5qRB0iYwBsYLpxqyNIK1TJW1IaIDJ3MXM2aC0Ol5TWgw/viewform?usp=dialog" target="_blank">Bahasa Arab</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc5Ls2jUcrrwNm5uEwA7-w9i_8D1Ix1_tp3SUNEGQkwrKxpAA/viewform?usp=dialog" target="_blank">Seni Budaya</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdgkU8xz5IAYK1jKs7mfy-0vbte9XZj92xdomAUlao_BwIezg/viewform?usp=header" target="_blank">Sejarah Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdN4LpX2n8rBoYmF2eeT3dAlbf99Rqy-l803_XZxTzHxC-M8w/viewform?usp=sf_link" target="_blank">Informatika</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-xEKCOFx6mxZygwMppS-VOOocX6fiSFbN2mGlSaeuCMWgFg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
