--- a/kelas10-1.html
+++ b/kelas10-1.html
@@ -97,9 +97,10 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeksD_AahMiuy-WioDPGFWxl-lPCndyNHwRbTh8wogi-kP89A/viewform?usp=dialog" target="_blank">Kimia Kelas 10-4</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBKrgFtLh9x9Fnu9TXSdq5CwXvGHRz5MnfgLjOYo3FPfAFSg/viewform?usp=dialog" target="_blank">Matematika_Wajib</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc07rvQF3SuK3Nr_gqOY_GKOz0qcYme3fywwmagQx2KfTxTKg/viewform?usp=dialog" target="_blank">Fikih_</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHDqnIswlIqfvCbp1G4QabXqAtg3ct8NWVvr8A4YiHjWGVEg/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhO1LNf4ZnBvmrXK8aGlvC-CGe63PQVIcd1DNLpkkbK3vZQw/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCL1Mj4JD63H4AQZfUYLm9lZflcBVktKVsVV-s4_b0wWkWZQ/viewform?usp=dialog" target="_blank">Geografi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-ZqGlO3e1rhM8UlE7agLPrIptS3yOl6Shqb-kjgWfkMFbBA/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
