--- a/kelas12-2.html
+++ b/kelas12-2.html
@@ -83,7 +83,7 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSepHtIKc8e1aY2_WqzmJkrPLhLUdtHph65uFth0KkYa-S2-Cw/viewform?usp=header" target="_blank">Matematika Peminatan</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdTIAUXvyQNkcw4XM_nV-ga7QKnANQPmGf4tztmTi-HsVurkQ/viewform?usp=header" target="_blank">Al-Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeyR466bpa2rqWqKsrZQh8lofkKlorl35xRinhtz8zTFPaVdQ/viewform?usp=header" target="_blank">Biologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBG_nhXpMsml8FM1ScVhouFgO_3XGKSI-5M8g54PwVkj-usg/viewform?usp=sharing" target="_blank">Akidah Akhlak</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJSg_Tpu969K4xK3NtdMU7fSpykCOkvg9UB9PtWUS85jw4Sw/viewform?usp=dialog" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHUWmWJwR5myITE2-g0oqp09ElCS_9gJqRVSqlzlqgkhan-w/viewform?usp=header" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdWpV5So8pU8-R0T_M-bzLxUtfeMmOO7-lVLSHKb6h6So1syA/viewform?usp=sharing" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYeXS_4V_PXAgfwPpbbO0BABmWOZqiXLEkrJUetuBbbOpCHA/viewform?usp=header" target="_blank">Fisika</a></li>
@@ -99,3 +99,4 @@
     </ul>
 </body>
 </html>
+
